Add benchmark code for neo4j get_nhbr(n, atype)